# aichs

./: .gitignore  AGENTS.md  LICENSE  README.md  aichs.spec  app.py  config.py  features.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
assets/: __init__.py
docs/: agent-canvas.md  compact.md  configuration.md  custom-models.md  extensions.md  mcp.md  skills.md  yuk.md
scripts/: render_icons.py
services/: agent_canvas_run.py  auto_title.py  chat.py  chat_drag.py  code_completion.py  commit_message.py  compaction.py  content.py  context_budget.py  continuation.py  conversation_run.py  crew.py  diff_html.py  export.py  extension_installer.py  file_editor_refs.py  file_refs.py  file_search.py  file_tree_snapshot.py  git_diff.py  git_snapshot.py  git_status.py  highlight.py  key_bindings.py  language_features.py  language_snapshot.py  mcp_config.py  mcp_logs.py  mcp_oauth.py  mcp_tools.py  model_registry.py  model_requests.py  palette.py  performance.py  processes.py  relative_time.py  shell_tool.py  skills.py  slash_commands.py  subprocess_utils.py  (+9 more)
storage/: agent_canvas.py  repository.py  settings.py  workspace_session.py
tests/: conftest.py  qss_ad_hoc_baseline.txt  qss_helpers.py  qss_window_probe.py  test_agent_canvas.py  test_auto_title.py  test_avatars.py  test_avatars_render.py  test_bubble_markdown.py  test_build_package.py  test_chat.py  test_chat_loop.py  test_chat_panel_crew.py  test_chat_panel_history.py  test_chat_panel_model.py  test_chat_panel_runtime_queue.py  test_chat_panel_title.py  test_chat_tools.py  test_code_completion.py  test_commit_message.py  test_compaction.py  test_compaction_api.py  test_config.py  test_content.py  test_context_analyze.py  (+79 more)
(+55 files in other folders)
